--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= link_to "Home", root_path %>
+<%= link_to "The Seat", seat_path %>
+<%= link_to "Company", company_path %>
+<%= link_to "Press", press_path %>
+<%= link_to "Contact", contact_path %>
 <%= yield %>
 
 </body>
